--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URI=http://emailloginbackend-env-1.eba-4emrrhct.us-east-1.elasticbeanstalk.com
+REACT_APP_BACKEND_URI=https://stellabeautysalon.com
